# singlaw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODOS.md
.github/workflows/: ci.yml
apps/rag-service/: .env.example  Dockerfile  Makefile  app.py  build_index.py  llm_providers.py  prompts.py  pyproject.toml  requirements.txt  retriever.py
apps/rag-service/tests/: test_retriever.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/prisma/: schema.prisma
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/sign-up/[[...rest-auth]]/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/chat/: page.tsx
apps/web/src/app/(dashboard)/history/: page.tsx
apps/web/src/app/api/trpc/[trpc]/: route.ts
apps/web/src/app/api/webhooks/clerk/: route.ts
apps/web/src/app/api/webhooks/stripe/: route.ts
apps/web/src/components/chat/: ChatBox.tsx  CitationCard.tsx
apps/web/src/components/history/: HistoryList.tsx
apps/web/src/lib/: db.ts  rag-client.ts  subscription.ts
apps/web/src/lib/trpc/: provider.tsx
apps/web/src/server/: root.ts  trpc.ts
apps/web/src/server/routers/: auth.ts  billing.ts  query.ts
docs/plans/: 2026-03-15-close-the-gaps.md
